<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings_category_server">
    <EditTextPreference
        android:key="preference_server_address"
        android:title="@string/preference_title_address"
        android:summary="@string/preference_summary_address"
        android:dialogTitle="@string/preference_dialog_address"
        android:defaultValue="@string/preference_value_address" />
    <EditTextPreference
        android:key="preference_server_login"
        android:title="@string/preference_title_login"
        android:summary="@string/preference_summary_login"
        android:dialogTitle="@string/preference_dialog_login"
        android:defaultValue="@string/preference_value_login" />
    <EditTextPreference
        android:key="preference_server_token"
        android:title="@string/preference_title_token"
        android:summary="@string/preference_summary_token"
        android:dialogTitle="@string/preference_dialog_token" />
    <EditTextPreference
        android:key="preference_server_peer"
        android:title="@string/preference_title_peer"
        android:summary="@string/preference_summary_peer"
        android:dialogTitle="@string/preference_dialog_peer"
        android:defaultValue="@string/preference_value_peer" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_category_visual">
    <ListPreference
        android:key="preference_theme"
        android:title="@string/preference_title_theme"
        android:summary="@string/preference_summary_theme"
        android:defaultValue="@string/preference_value_theme"
        android:entries="@array/theme_names"
        android:entryValues="@array/theme_values" />
    <CheckBoxPreference
        android:key="preference_show_toast"
        android:title="@string/preference_title_toast"
        android:summary="@string/preference_summary_toast"
        android:defaultValue="@string/preference_value_toast" />
    <CheckBoxPreference
        android:key="preference_back_home"
        android:title="@string/preference_title_back_home"
        android:summary="@string/preference_summary_back_home"
        android:defaultValue="@string/preference_value_back_home" />
    <CheckBoxPreference
        android:key="preference_disable_bluetooth"
        android:title="@string/preference_title_disable_bluetooth"
        android:summary="@string/preference_summary_disable_bluetooth"
        android:defaultValue="@string/preference_value_disable_bluetooth" />
    <CheckBoxPreference
        android:key="preference_auto_discovery"
        android:title="@string/preference_title_auto_discovery"
        android:summary="@string/preference_summary_auto_discovery"
        android:defaultValue="@string/preference_value_auto_discovery" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_category_misc">
    <EditTextPreference
        android:key="preference_minimum_signal"
        android:inputType="number"
        android:title="@string/preference_title_min_signal"
        android:summary="@string/preference_summary_min_signal"
        android:dialogTitle="@string/preference_dialog_min_signal"
        android:defaultValue="@string/preference_value_min_signal" />
    <EditTextPreference
        android:key="preference_maximum_signal"
        android:inputType="number"
        android:title="@string/preference_title_max_signal"
        android:summary="@string/preference_summary_max_signal"
        android:dialogTitle="@string/preference_dialog_max_signal"
        android:defaultValue="@string/preference_value_max_signal" />
  </PreferenceCategory>

</PreferenceScreen>